--- a/catalog/view/theme/krishna/javascript/easy-autocomplete.css
+++ b/catalog/view/theme/krishna/javascript/easy-autocomplete.css
@@ -241,9 +241,10 @@
   color: #555;
   padding: 6px 12px;
 }
-
+/*custom addition top:25px*/
 .easy-autocomplete-container {
   left: 0;
+  top:30px;
   position: absolute;
   width: 100%;
   z-index: 2;
